# sxid

./: .gitignore  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  acconfig.h  configure  configure.ac  configure.in
contrib/: sxid.spec
debian/: NEWS  changelog  conffiles  control  copyright  cron.daily  install  manpages  rules  sxid.default  watch
docs/: sxid.1.in  sxid.conf.5.in  sxid.conf.example  sxid.cron.example
examples/: sxid.conf  sxid.cron
source/: Makefile.in  conffile.c  config.h.in  getopt.c  getopt.h  getopt1.c  logging.c  md5.c  md5.h  md5sum.c  notify.c  search.c  sxid.c  sxid.h
src/: Makefile.am  conffile.c  config.h.in  logging.c  md5.h  md5sum.c  notify.c  search.c  sha2.c  sxid.c  sxid.h
