SUBDIRS = source

EXTRA_DIST = contrib examples source/getopt.c source/getopt1.c source/getopt.h

man_MANS = docs/sxid.1 docs/sxid.conf.5
doc_DATA = README NEWS

contribdir = $(docdir)/contrib
contrib_DATA = contrib/sxid.spec

examplesdir = $(docdir)/examples
examples_DATA = examples/sxid.conf examples/sxid.cron
