SUBDIRS = src

EXTRA_DIST = contrib examples src/getopt.c src/getopt1.c src/getopt.h

man_MANS = docs/sxid.1 docs/sxid.conf.5
doc_DATA = README NEWS

contribdir = $(docdir)/contrib
contrib_DATA = contrib/sxid.spec

examplesdir = $(docdir)/examples
examples_DATA = examples/sxid.conf examples/sxid.cron
