dnl $Id: configure.in,v 1.26 2002/01/22 04:57:48 bmc Exp $

dnl Process this file with autoconf to produce a configure script.

AC_INIT(source/sxid.h)
VERSION=4.0.5
AC_CONFIG_HEADER(source/config.h)

AC_PROG_CC
AC_PROG_INSTALL

mail_prog="mail"
AC_CHECK_PROG(UNAME, uname, uname)
system=`$UNAME`
AC_MSG_CHECKING(OS)
AC_MSG_RESULT($system)
case $system in
  Linux)
    ;;
  *)
    mail_prog="sendmail"
    ;;
esac

if test "$mail_prog" = "mail"; then
  AC_DEFINE(CL_SUBJ)
fi

AC_PATH_PROG(MAIL_PROG, "$mail_prog", "/usr/bin/mail", $PATH:/usr/sbin:/usr/lib)
AC_DEFINE_UNQUOTED(MAIL_PROG, "$ac_cv_path_MAIL_PROG")

AC_CHECK_FUNC(getopt_long_only, [AC_DEFINE(HAVE_GETOPT)], [
  EXTRA_OBJ="getopt.o getopt1.o"
])

AC_CHECK_FUNCS(strtok_r)

AC_SUBST(VERSION)
AC_SUBST(EXTRA_OBJ)
AC_SUBST(INCLUDES)

test "x$prefix" = xNONE && prefix="$ac_default_prefix"
TMPCONF=`eval echo $sysconfdir`
AC_SUBST(TMPCONF)
AC_DEFINE_UNQUOTED(CONF_FILE, "${TMPCONF}/sxid.conf")
AC_DEFINE_UNQUOTED(VERSION, "${VERSION}")

AC_OUTPUT(source/Makefile docs/sxid.1 docs/sxid.conf.5)
